# dp-agent

./: .gitignore  1947932495202267136_DP数据处理智能体系统解决方案.txt  README.md  docker-compose.yml  test_integration.py
.vercel/: project.json
backend/: .env.example  Dockerfile  README.md  init_db.py  main.py  pyproject.toml  requirements.txt
backend/app/api/: routes.py
backend/app/core/: agent_orchestrator.py  config.py  database.py  minio_client.py  sandbox_executor.py  version_manager.py
backend/app/models/: __init__.py  data_version.py
backend/app/services/: data_profiler.py  session_manager.py
backend/dp-agent-next/: package-lock.json  package.json
docs/: 20241230_001_修改记录.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(basicLayout)/: layout.tsx
frontend/src/app/(basicLayout)/project/[id]/: page.tsx
frontend/src/app/console/: page.tsx
frontend/src/app/project/[id]/: page.tsx
frontend/src/app/session/[id]/: page.tsx
frontend/src/components/: ChatInterface.tsx  DataProfiler.tsx  ProjectList.tsx  VersionManager.tsx  app-sidebar.tsx  chat-interface.tsx  data-profiler.tsx  excel-preview.tsx  nav-main.tsx  project-list.tsx
frontend/src/components/project/: chat-interface.tsx  document-repository.tsx  file-preview.tsx  project-layout.tsx
frontend/src/components/ui/: avatar.tsx  dialog.tsx  scroll-area.tsx  separator.tsx  sidebar.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
