[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dp-agent-backend"
version = "0.1.0"
description = "DP数据处理智能体系统后端"
authors = [
    {name = "DP Agent Team"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    "openai>=1.30.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.0.2",
    "polars>=0.20.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.0",
    "minio>=7.0.0",
    "docker>=7.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.9"

license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/your-org/dp-agent"
Repository = "https://github.com/your-org/dp-agent"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"